fixed h2 on mobile

--- a/themes/perfecttheme/assets/scss/_main.scss
+++ b/themes/perfecttheme/assets/scss/_main.scss
@@ -179,7 +179,7 @@ header {
     }
     
     h2 {
-        font-size: clamp(1.6rem, 2.7vw, 2.7rem);
+        font-size: clamp(1.6rem, 2.4vw, 2.4rem);
         line-height: 1.1;
         margin: 3rem 0 1.38rem 0;
     }
